# uchronia-time-series

./: .gitignore  LICENSE.txt  README.md  Readme.md
.github/workflows/: build-matrix.yml  ci.yml  release.yml
Solutions/: DataTypes.sln
bindings/: create_r_uchronia.r
bindings/R/pkgs/uchronia/: .Rbuildignore  DESCRIPTION  NAMESPACE  README.md  cleanup.win  configure.win
bindings/R/pkgs/uchronia/R/: 00class-definitions.r  RcppExports.R  uchronia-data-set.r  uchronia-internals.r  uchronia-package.r  uchronia-pkg-wrap-generated.r  uchronia-plot.r  uchronia-sample-data.r  uchronia-time-series-transforms.r  uchronia-time-series.r  uchronia-wrap-generated.r  zzz.R
bindings/R/pkgs/uchronia/data/: time_series_library_stanley.yaml
bindings/R/pkgs/uchronia/debian/: README.source  changelog  control  copyright  r-uchronia.lintian-overrides  source.lintian-overrides
bindings/R/pkgs/uchronia/man/: CreateEnsembleDataset_R.Rd  CreateEnsembleForecastTimeSeries_R.Rd  CreateEnsembleTimeSeriesDataFromStruct_R.Rd  CreatePerfectForecastTimeSeries_R.Rd  CreateSingleTimeSeriesDataFromStruct_R.Rd  DeleteDoubleArray_R.Rd  DisposeSharedPointer_R.Rd  EnsembleSizeEnsembleTimeSeries_R.Rd  GetDatasetEnsembleForecastTimeSeries_R.Rd  GetDatasetEnsembleTimeSeries_R.Rd  GetDatasetFromLibrary_Pkg_R.Rd  GetDatasetSingleTimeSeries_R.Rd  GetEnsembleDatasetDataIdentifiers_R.Rd  GetEnsembleDatasetDataSubIdentifiers_R.Rd  GetEnsembleDatasetDataSummaries_R.Rd  GetEnsembleForecastTimeSeriesGeometry_Pkg_R.Rd  GetEnsembleForecastTimeSeriesGeometry_R.Rd  GetEnsembleTimeSeries_Pkg_R.Rd  GetItemEnsembleForecastTimeSeries_Pkg_R.Rd  GetItemEnsembleTimeSeriesAsStructure_R.Rd  GetLastStdExceptionMessage_R.Rd  GetNumTimeSeries_R.Rd  GetProviderTimeSeriesIdentifiers_R.Rd  GetProviderTimeSeriesValues_R.Rd  GetProviderTsGeometry_R.Rd  GetTimeSeriesGeometry_Pkg_R.Rd  GetTimeSeriesGeometry_R.Rd  GetTimeSeriesValues_R.Rd  GetValueFromUnivariateTimeSeries_R.Rd  IsMissingValueItemEnsembleForecastTimeSeries_R.Rd  (+51 more)
bindings/codegen/: api_importer.cpp
bindings/python/: generate_pybind11.R
bindings/python/doc/: code_sample_exploratory.md  notes.md  uchronia_data_representation_in_python.md  uchronia_elaboration.py
bindings/python/swig/: Readme.md  manual_tests.i
bindings/python/uchronia/: LICENSE.txt  README.md  README.rst  mkdocs.yml  requirements.txt  setup.cfg  setup.py
bindings/python/uchronia/data/: funcs_cdef.h  structs_cdef.h
bindings/python/uchronia/notebooks/: overview.ipynb  overview.py  time_series_libraries.ipynb  time_series_libraries.py
bindings/python/uchronia/tests/: test_low_level.py  test_simple.py
bindings/python/uchronia/uchronia/: __init__.py  _version.py  classes.py  const.py  data_set.py  internals.py  sample_data.py  time_series.py  uchronia_data_set.py  uchronia_internals.py  uchronia_sample_data.py  uchronia_time_series.py  utils.py
bindings/python/uchronia_pb/: LICENSE  README.md  setup.py
bindings/python/uchronia_pb/conda.recipe/: meta.yaml
bindings/python/uchronia_pb/include/: cpp_bindings_generated.h  uchronia_pb_exports.h
bindings/python/uchronia_pb/src/: cpp_bindings_generated.cpp  main.cpp  uchronia_pb.def  uchronia_pb.sln  uchronia_pb.vcxproj  uchronia_pd.vcxproj.filters
bindings/python/uchronia_pb/tests/: test.py  test_low_level.py
conda.recipe/: bld.bat  datatypes_run_tests.bat  datatypes_run_tests.sh  meta.yaml  run_test.bat  run_test.sh
datatypes/: CMakeLists.txt  FindNetCDF.cmake  common.cpp  common.h  datatypes.kdev4  datatypes.vcxproj  datatypes.vcxproj.filters  exception_utilities.h  extern_c_api.cpp  interop_conversions.cpp  interop_conversions.h  io_helper.cpp  io_helper.h  lib_paths.props.in  time_series.cpp  time_series.h  time_series.hpp  time_series_io.cpp  time_series_io.hpp  time_series_store.cpp  time_series_store.h  time_series_store.hpp  time_series_strategies.hpp  time_step.cpp  time_step.h  time_step_implementation.cpp  time_step_implementation.h  uchronia.pc.in  version.cmake
datatypes/debian/: README.Debian  README.source  changelog  control  copyright  libuchronia-dev.dirs  libuchronia-dev.install  libuchronia-dev.lintian-overrides  libuchronia.install  libuchronia.lintian-overrides  not-installed  rules  source.lintian-overrides
datatypes/include/datatypes/: common.h  datatypes_test_helpers.h  exception_utilities.h  extern_c_api.h  extern_c_api_as_opaque.h  extern_c_api_transparent_pointers.h  internals_c_api.hpp  interop_conversions.h  interop_conversions.hpp  setup_exports.h  time_series.hpp  time_series_io.hpp  time_series_store.hpp  time_series_strategies.hpp  time_step.h  time_step_implementation.h
datatypes/src/: common.cpp  datatypes.natvis  datatypes.vcxproj  extern_c_api.cpp  interop_conversions.cpp  time_series.cpp  time_series_io.cpp  time_step.cpp  time_step_implementation.cpp
datatypes/src/tests/: datatypes_test_helpers.cpp
datatypes/tests/: datatypes_test_helpers.cpp  datatypes_test_helpers.h  datatypes_test_helpers.hpp
doc/: debian-packaging.md  modsim_paper_demo.yaml  notes.md  paper.r  use_cases.md
include/datatypes/: common.h  datatypes_test_helpers.h  datatypes_test_helpers.hpp  exception_utilities.h  extern_c_api.h  extern_c_api_as_opaque.h  extern_c_api_as_transparent.h  extern_c_api_transparent_pointers.h  internals_c_api.hpp  interop_conversions.h  interop_conversions.hpp  interop_struct.h  setup_exports.h  shared_pointer_conversions.hpp  time_series.hpp  time_series_io.hpp  time_series_store.hpp  time_series_strategies.hpp  time_step.h  time_step_implementation.h
tests/: CMakeLists.txt  basic_timeseries.cpp  catch_macros.hpp  common_datatypes.cpp  common_datatypes.h  create_swift_netcdf_ens_data.R  datatypes_netcdf_tests.cpp  datatypes_test_helpers.hpp  ensemble_timeseries.cpp  main.cpp  testdatatypes.vcxproj  testdatatypes.vcxproj.filters  time_series.cpp  time_series_libraries.cpp
tests/R/datadev/: DESCRIPTION  NAMESPACE  README.md
tests/R/datadev/R/: datadev-package.r  functions.r
tests/api/: CMakeLists.txt  main.cpp  testdatatypesapi.vcxproj  testdatatypesapi.vcxproj.filters
(+32 files in other folders)
